--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "expo-sensors": "~13.0.9",
     "expo-file-system": "~17.0.1",
     "expo-location": "~17.0.1",
-    "react-native-maps": "1.14.0"
+    "react-native-maps": "1.14.0",
+    "expo-local-authentication": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
